Port code to Java 8 compliance